fixed an issue with the jumbotron background image not completely stretching its width

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@ body * {
 
 .ternBackground {
     background-image: url(../images/tern-banner.png);
-    background-size: contain;
+    background-position: center top;
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 400px;
+    background-color: #21BDBD;
+    height: 600px;
     max-width: 100%;
     display: flex;
     align-items: center;
